src/objects/Organization_Institutional_Sales__c.object
<CustomObject>
    <description>Ties in Sales &amp; Asset data</description>
    <fields>
        <fullName>AUM_AUD__c</fullName>
        <label>AUM - AUD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AUM_CAD__c</fullName>
        <label>AUM - CAD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AUM_EUR__c</fullName>
        <label>AUM - EUR</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AUM_GBP__c</fullName>
        <label>AUM - GBP</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AUM_JPY__c</fullName>
        <label>AUM - JPY</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AUM_SGD__c</fullName>
        <label>AUM - SGD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AUM_USD__c</fullName>
        <label>AUM - USD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AUM__c</fullName>
        <label>AUM</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Client_Reporting_Currency_Code__c</fullName>
        <description>&quot;Currency code of client reporting.

It should be the currency defined for the Plan. Current assumption is that all investments / investment accounts in the same Plan will have the same currency.&quot;</description>
        <label>Client Reporting Currency Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_End_Date__c</fullName>
        <label>Month End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Organization_MDM_ID__c</fullName>
        <label>Organization MDM ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Organization Institutional Sales</relationshipLabel>
        <relationshipName>Organization_Institutional_Sales</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Plan_ID__c</fullName>
        <description>Populated when Level = Plan, or Level = Portfolio</description>
        <label>Plan ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <description>&quot;Populated when Level = Plan, or Level = Portfolio

For portfolios that don&apos;t have a plan, assign them to the &quot;&quot;Other&quot;&quot; bucket. Please provide &quot;&quot;Other&quot;&quot; as value&quot;</description>
        <label>Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>Organization Institutional Sales</relationshipLabel>
        <relationshipName>Organization_Institutional_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portfolio_ID__c</fullName>
        <description>Populated when Level = Portfolio</description>
        <label>Portfolio ID</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portfolio</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Organization Institutional Sales</relationshipLabel>
        <relationshipName>Organization_Institutional_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Redemptions_AUD__c</fullName>
        <label>Prior Year Redemptions - AUD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Redemptions_CAD__c</fullName>
        <label>Prior Year Redemptions - CAD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Redemptions_EUR__c</fullName>
        <label>Prior Year Redemptions - EUR</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Redemptions_GBP__c</fullName>
        <label>Prior Year Redemptions - GBP</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Redemptions_JPY__c</fullName>
        <label>Prior Year Redemptions - JPY</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Redemptions_SGD__c</fullName>
        <label>Prior Year Redemptions - SGD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Redemptions_USD__c</fullName>
        <label>Prior Year Redemptions - USD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Redemptions__c</fullName>
        <label>Prior Year Redemptions</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Sales_AUD__c</fullName>
        <label>Prior Year Sales - AUD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Sales_CAD__c</fullName>
        <label>Prior Year Sales - CAD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Sales_EUR__c</fullName>
        <label>Prior Year Sales - EUR</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Sales_GBP__c</fullName>
        <label>Prior Year Sales - GBP</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Sales_JPY__c</fullName>
        <label>Prior Year Sales - JPY</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Sales_SGD__c</fullName>
        <label>Prior Year Sales - SGD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Sales_USD__c</fullName>
        <label>Prior Year Sales - USD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Sales__c</fullName>
        <label>Prior Year Sales</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Refresh_Date__c</fullName>
        <label>Refresh Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>YTD_Net_AUD__c</fullName>
        <label>YTD Net - AUD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Net_CAD__c</fullName>
        <label>YTD Net - CAD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Net_EUR__c</fullName>
        <label>YTD Net - EUR</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Net_GBP__c</fullName>
        <label>YTD Net - GBP</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Net_JPY__c</fullName>
        <label>YTD Net - JPY</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Net_SGD__c</fullName>
        <label>YTD Net - SGD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Net_USD__c</fullName>
        <label>YTD Net - USD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Net__c</fullName>
        <label>YTD Net</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Redemptions_AUD__c</fullName>
        <label>YTD Redemptions - AUD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Redemptions_CAD__c</fullName>
        <label>YTD Redemptions - CAD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Redemptions_EUR__c</fullName>
        <label>YTD Redemptions - EUR</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Redemptions_GBP__c</fullName>
        <label>YTD Redemptions - GBP</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Redemptions_JPY__c</fullName>
        <label>YTD Redemptions - JPY</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Redemptions_SGD__c</fullName>
        <label>YTD Redemptions - SGD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Redemptions_USD__c</fullName>
        <label>YTD Redemptions - USD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Redemptions__c</fullName>
        <label>YTD Redemptions</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Sales_AUD__c</fullName>
        <label>YTD Sales - AUD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Sales_CAD__c</fullName>
        <label>YTD Sales - CAD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Sales_EUR__c</fullName>
        <label>YTD Sales - EUR</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Sales_GBP__c</fullName>
        <label>YTD Sales - GBP</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Sales_JPY__c</fullName>
        <label>YTD Sales - JPY</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Sales_SGD__c</fullName>
        <label>YTD Sales - SGD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Sales_USD__c</fullName>
        <label>YTD Sales - USD</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Sales__c</fullName>
        <label>YTD Sales</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Organization Institutional Sales</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Institutional Sales Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organization Institutional Sales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>